[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mamba_mojo"
version = "0.0.1"
description = "mamba architecture in mojo"
license = "MIT"
authors = ["Vyomakesh09 <vyomkeshkesh@gmail.com>"]
homepage = "https://github.com/vyomakesh09/mamba_mojo"
documentation = ""  # Add this if you have documentation.
readme = "README.md"  # Assuming you have a README.md
repository = "https://github.com/vyomakesh09/mamba_mojo"
keywords = ["artificial intelligence", "deep learning", "optimizers", "Prompt Engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6"
]

[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
# Add development dependencies here
